api/manifests/webhook_domainrequest.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kloudlite-domainrequest-validating-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJekNDQWd1Z0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREF6TVJJd0VBWURWUVFLRXdsTGJHOTEKWkd4cGRHVXhIVEFiQmdOVkJBTVRGRXRzYjNWa2JHbDBaU0JYWldKb2IyOXJJRU5CTUI0WERUSTFNVEV3TkRBMQpNVFl5TVZvWERUTTFNVEV3TkRBMU1UWXlNVm93TXpFU01CQUdBMVVFQ2hNSlMyeHZkV1JzYVhSbE1SMHdHd1lEClZRUURFeFJMYkc5MVpHeHBkR1VnVjJWaWFHOXZheUJEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVAKQURDQ0FRb0NnZ0VCQU9YTjE0WDBmOFZtWW01cUZzaHVYcFZmU2dxMUxaZHpCSW1mZ3YxeGZCS3FkajhoRFJKSgorM2NtR0tiRlUwVC [...]
    service:
      name: api-server
      namespace: kloudlite
      path: /validate-domains-kloudlite-io-v1-domainrequest
  failurePolicy: Fail
  name: vdomainrequest.kb.io
  rules:
  - apiGroups:
    - domains.kloudlite.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - domainrequests
  sideEffects: None
